--- a/apps/yuzu.html
+++ b/apps/yuzu.html
@@ -146,7 +146,7 @@ p {
     <p>Émulateur Nintendo Switch haute performance pour PC.</p>
 
     <button class="download-btn"
-        onclick="window.open('https://www.dropbox.com/scl/fi/rggrast2zx4koz12e5p5q/yuzu1734_setup.exe?rlkey=vjxonble0fuclhknrksre4r77&st=c732q0k3&dl=1','_blank')">
+        onclick="window.open('https://www.dropbox.com/scl/fi/39y4e9khw680z6pkopxhb/yuzuswitchemulatorsetup1734.exe?rlkey=ha32ouxcezi3yqspzaa4xg6vx&st=73c8z4ht&dl=1','_blank')">
         Télécharger pour Windows
     </button>
 
@@ -166,3 +166,4 @@ p {
 
 </body>
 </html>
+
