--- a/apps/yuzu.html
+++ b/apps/yuzu.html
@@ -154,7 +154,7 @@ p {
         <h3>Tutoriel vidéo</h3>
         <div class="video-wrapper">
             <iframe 
-                src="https://www.youtube.com/embed/nFB7IEv9Q9k"
+                src="https://www.youtube.com/embed/U1KBHgR_1r8?si=oNGxQaJTddnp92Hn"
                 title="Tutoriel Yuzu"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
@@ -166,5 +166,6 @@ p {
 
 </body>
 </html>
+
 
 
