--- a/apps/mariokart8deluxe.html
+++ b/apps/mariokart8deluxe.html
@@ -154,7 +154,7 @@ p {
         <h3>Gameplay / Tutoriel</h3>
         <div class="video-wrapper">
             <iframe
-                src="https://www.youtube.com/embed/tKlRN2YpxRE"
+                src="https://www.youtube.com/embed/rIfbPeQUC8c?si=rr-w9bFw4ljszdHY"
                 title="Mario Kart 8 Deluxe"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
@@ -166,3 +166,4 @@ p {
 
 </body>
 </html>
+
