--- a/apps/mariokart8deluxe.html
+++ b/apps/mariokart8deluxe.html
@@ -1,169 +1,176 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>Mario Kart 8 Deluxe – Téléchargement</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>APPEVENT | Mario Kart 8 Deluxe</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&family=Share+Tech+Mono&family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+    
+    <style>
+        :root { --abyss: #020205; --magenta: #D62F7F; --void: #0B0C15; }
+        
+        body, html { 
+            background: var(--abyss); 
+            color: #fff; 
+            margin: 0; 
+            font-family: 'Montserrat', sans-serif; 
+            min-height: 100vh;
+        }
 
-<link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/udvygiv463rwfdjcf9q9m/apphub.png?dl=1">
+        /* Custom Cursor */
+        #custom-cursor { 
+            width: 30px; height: 30px; border: 1px solid var(--magenta); 
+            position: fixed; pointer-events: none; z-index: 10000; border-radius: 50%; 
+            transition: transform 0.1s ease-out; transform: translate(-50%, -50%); 
+            box-shadow: 0 0 15px var(--magenta); display: none;
+        }
+        @media (min-width: 1024px) { body, html, * { cursor: none !important; } #custom-cursor { display: block; } }
 
-<style>
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: radial-gradient(circle at top, #122033, #0b1520);
-    color: white;
-    min-height: 100vh;
-}
+        /* Effects */
+        .scanline { width: 100%; height: 100px; z-index: 40; pointer-events: none; background: linear-gradient(0deg, rgba(214, 47, 127, 0) 0%, rgba(214, 47, 127, 0.05) 50%, rgba(214, 47, 127, 0) 100%); position: fixed; top: -100px; animation: scan 6s linear infinite; }
+        @keyframes scan { 0% { top: -100px; } 100% { top: 100%; } }
 
-/* HEADER */
-header {
-    width: 100%;
-    padding: 20px 40px;
-    background: #0e1a2a;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-}
+        .hud-corner { position: absolute; width: 15px; height: 15px; border: 1px solid var(--magenta); opacity: 0.5; }
 
-header h1 {
-    margin: 0;
-    color: #ff3d00;
-}
+        /* Glassmorphism Container */
+        .glass-panel {
+            background: rgba(214, 47, 127, 0.02);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(15px);
+        }
 
-header button {
-    background: #ff3d00;
-    border: none;
-    padding: 10px 18px;
-    border-radius: 8px;
-    font-weight: bold;
-    cursor: pointer;
-}
+        .download-btn {
+            background: transparent;
+            border: 1px solid var(--magenta);
+            color: var(--magenta);
+            text-transform: uppercase;
+            letter-spacing: 0.2em;
+            transition: 0.4s;
+            box-shadow: 0 0 15px rgba(214, 47, 127, 0.2);
+        }
+        .download-btn:hover {
+            background: var(--magenta);
+            color: white;
+            box-shadow: 0 0 30px var(--magenta);
+            transform: translateY(-2px);
+        }
 
-/* CONTAINER */
-.container {
-    max-width: 1000px;
-    margin: 50px auto;
-    padding: 20px;
-    text-align: center;
-}
+        .back-btn {
+            font-family: 'Share Tech Mono', monospace;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            transition: 0.3s;
+        }
+        .back-btn:hover {
+            border-color: var(--magenta);
+            color: var(--magenta);
+        }
 
-/* LOGO */
-.logo {
-    width: 260px;
-    margin-bottom: 30px;
-    filter: drop-shadow(0 0 25px rgba(255,61,0,0.6));
-}
-
-/* TEXTE */
-h2 {
-    font-size: 2.2rem;
-    margin-bottom: 10px;
-}
-
-p {
-    opacity: 0.8;
-    margin-bottom: 40px;
-}
-
-/* BOUTON */
-.download-btn {
-    background: linear-gradient(45deg, #ff3d00, #ff9100);
-    border: none;
-    padding: 18px 45px;
-    border-radius: 12px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.2s;
-    box-shadow: 0 0 30px rgba(255,61,0,0.5);
-}
-
-.download-btn:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 40px rgba(255,61,0,0.8);
-}
-
-/* YOUTUBE */
-.youtube-section {
-    margin-top: 60px;
-}
-
-.youtube-section h3 {
-    margin-bottom: 20px;
-    color: #ff9100;
-}
-
-.video-wrapper {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    border-radius: 15px;
-    box-shadow: 0 0 25px rgba(255,145,0,0.4);
-}
-
-.video-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
-/* RESPONSIVE */
-@media (max-width: 768px) {
-    h2 {
-        font-size: 1.8rem;
-    }
-    .download-btn {
-        padding: 15px 30px;
-        font-size: 1rem;
-    }
-    header {
-        flex-direction: column;
-        gap: 15px;
-    }
-}
-</style>
+        .video-wrapper {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+            border: 1px solid rgba(214, 47, 127, 0.3);
+        }
+    </style>
 </head>
 <body>
 
-<header>
-    <h1>AppHub</h1>
-    <button onclick="window.history.back()">Retour</button>
-</header>
+    <div id="custom-cursor"></div>
+    <canvas id="starCanvas" class="fixed inset-0 z-0"></canvas>
+    <div class="scanline"></div>
 
-<div class="container">
-
-    <img class="logo"
-         src="https://assets.nintendo.eu/image/upload/f_auto,c_limit,w_992,q_auto:low/MNS/NOE/70010000000126/SQ_NSwitch_MarioKart8Deluxe"
-         alt="Mario Kart 8 Deluxe">
-
-    <h2>Mario Kart 8 Deluxe – v3.0.5</h2>
-    <p>Jeu Nintendo Switch – compatible émulateur / console (backup personnel).</p>
-
-    <button class="download-btn"
-        onclick="window.open('https://app.drime.cloud/drive/s/IA5e7ja2WdRy4qLZFpdz039744cQuX')">
-        Télécharger (3.0.5)
-    </button>
-
-    <div class="youtube-section">
-        <h3>Gameplay / Tutoriel</h3>
-        <div class="video-wrapper">
-            <iframe
-                src="https://www.youtube.com/embed/rIfbPeQUC8c?si=rr-w9bFw4ljszdHY"
-                title="Mario Kart 8 Deluxe"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-            </iframe>
+    <nav class="relative z-50 border-b border-white/10 bg-black/50 backdrop-blur-md px-8 py-4 flex justify-between items-center">
+        <div class="flex items-center gap-4">
+            <div class="w-10 h-10 border border-magenta rotate-45 flex items-center justify-center overflow-hidden">
+                <img src="apphub.png" alt="Logo" class="rotate-[-45deg] w-6 h-6 object-contain">
+            </div>
+            <h1 class="font-rajdhani font-bold text-2xl tracking-tighter uppercase">App<span class="text-magenta">Event</span></h1>
         </div>
+        <button onclick="window.location.href='../dashboard.html'" class="back-btn px-6 py-2 text-xs tracking-widest uppercase">
+            << Return_to_Deck
+        </button>
+    </nav>
+
+    <main class="relative z-10 p-6 md:p-12 max-w-4xl mx-auto">
+        <div class="glass-panel p-8 md:p-12 relative overflow-hidden">
+            <div class="hud-corner top-0 left-0 border-r-0 border-b-0"></div>
+            <div class="hud-corner top-0 right-0 border-l-0 border-b-0"></div>
+            <div class="hud-corner bottom-0 left-0 border-r-0 border-t-0"></div>
+            <div class="hud-corner bottom-0 right-0 border-l-0 border-t-0"></div>
+
+            <div class="flex flex-col items-center text-center">
+                <div class="relative mb-8 group">
+                    <div class="absolute -inset-1 bg-magenta opacity-30 blur-xl group-hover:opacity-50 transition duration-1000"></div>
+                    <img class="relative w-48 md:w-64 rounded-sm border border-white/10"
+                         src="https://assets.nintendo.eu/image/upload/f_auto,c_limit,w_992,q_auto:low/MNS/NOE/70010000000126/SQ_NSwitch_MarioKart8Deluxe"
+                         alt="Mario Kart 8 Deluxe">
+                </div>
+
+                <p class="font-mono text-magenta text-[10px] tracking-[0.5em] uppercase mb-2">Package_ID: MK8_DLX_NS</p>
+                <h2 class="font-rajdhani text-3xl md:text-5xl font-bold uppercase tracking-tight mb-4">Mario Kart 8 Deluxe</h2>
+                <p class="font-mono text-[11px] text-gray-500 mb-8 max-w-lg">
+                    Build: v3.0.5 // Archive_Status: Decrypted<br>
+                    Compatible: Emulator / Native Console (Personal Backup)
+                </p>
+
+                <button class="download-btn px-10 py-5 font-bold text-sm"
+                        onclick="window.open('https://app.drime.cloud/drive/s/IA5e7ja2WdRy4qLZFpdz039744cQuX')">
+                    Initialize_Download (v3.0.5)
+                </button>
+            </div>
+
+            <div class="mt-16">
+                <div class="flex items-center gap-4 mb-6">
+                    <h3 class="font-rajdhani font-bold text-xl uppercase tracking-widest">Tutorial_Intel</h3>
+                    <div class="h-[1px] bg-magenta/30 flex-1"></div>
+                </div>
+                <div class="video-wrapper">
+                    <iframe
+                        class="absolute top-0 left-0 w-full h-full"
+                        src="https://www.youtube.com/embed/rIfbPeQUC8c?si=Aw8_lft0lLhdhbAV"
+                        title="Mario Kart 8 Deluxe"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <div class="fixed bottom-0 w-full bg-black/80 border-t border-white/5 px-8 py-2 flex justify-between font-mono text-[8px] uppercase tracking-[0.3em] opacity-50 z-50">
+        <div>Link: Secure_Mirror_01</div>
+        <div>Traffic: <span class="text-green-500">Optimal</span></div>
+        <div id="live-clock">00:00:00</div>
     </div>
 
-</div>
+    <script>
+        // Star Background
+        const canvas = document.getElementById('starCanvas');
+        const ctx = canvas.getContext('2d');
+        let stars = [];
+        function initStars() {
+            canvas.width = window.innerWidth; canvas.height = window.innerHeight;
+            stars = [];
+            for(let i=0; i<80; i++) stars.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, s:Math.random()*1.5, op:Math.random(), sp:Math.random()*0.015});
+        }
+        function animateStars() {
+            ctx.clearRect(0,0,canvas.width, canvas.height);
+            stars.forEach(s => { s.op += s.sp; if(s.op > 1 || s.op < 0) s.sp *= -1; ctx.fillStyle = `rgba(214, 47, 127, ${s.op})`; ctx.fillRect(s.x, s.y, s.s, s.s); });
+            requestAnimationFrame(animateStars);
+        }
+        initStars(); animateStars();
 
+        // Cursor & Clock
+        const cursor = document.getElementById('custom-cursor');
+        window.addEventListener('mousemove', e => { 
+            cursor.style.left = e.clientX + 'px'; 
+            cursor.style.top = e.clientY + 'px'; 
+        });
+        setInterval(() => { 
+            document.getElementById('live-clock').innerText = new Date().toLocaleTimeString(); 
+        }, 1000);
+    </script>
 </body>
 </html>
-
