--- a/apps/yuzu.html
+++ b/apps/yuzu.html
@@ -1,171 +1,72 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>Yuzu – Téléchargement</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/udvygiv463rwfdjcf9q9m/apphub.png?rlkey=tzfqv7nur15y3fjezvap2x07h&st=wkkmu99f&dl=1">
-
-<style>
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: radial-gradient(circle at top, #122033, #0b1520);
-    color: white;
-    min-height: 100vh;
-}
-
-/* HEADER */
-header {
-    width: 100%;
-    padding: 20px 40px;
-    background: #0e1a2a;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-}
-
-header h1 {
-    margin: 0;
-    color: #00c6ff;
-}
-
-header button {
-    background: #00c6ff;
-    border: none;
-    padding: 10px 18px;
-    border-radius: 8px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-/* CONTAINER CENTRAL */
-.container {
-    max-width: 1000px;
-    margin: 50px auto;
-    padding: 20px;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-/* LOGO */
-.logo {
-    width: 140px;
-    margin-bottom: 30px;
-    filter: drop-shadow(0 0 25px rgba(0,198,255,0.6));
-}
-
-/* TITRES ET TEXTE */
-h2 {
-    font-size: 2.2rem;
-    margin-bottom: 10px;
-}
-
-p {
-    opacity: 0.8;
-    margin-bottom: 40px;
-}
-
-/* BOUTON TÉLÉCHARGEMENT */
-.download-btn {
-    background: linear-gradient(45deg, #00c6ff, #0099ff);
-    border: none;
-    padding: 18px 45px;
-    border-radius: 12px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.2s;
-    box-shadow: 0 0 30px rgba(0,198,255,0.5);
-}
-
-.download-btn:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 40px rgba(0,198,255,0.8);
-}
-
-/* SECTION YOUTUBE */
-.youtube-section {
-    margin-top: 60px;
-}
-
-.youtube-section h3 {
-    margin-bottom: 20px;
-    color: #00c6ff;
-}
-
-/* VIDEO WRAPPER */
-.video-wrapper {
-    position: relative;
-    padding-bottom: 56.25%; /* ratio 16:9 */
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    border-radius: 15px;
-    box-shadow: 0 0 25px rgba(0,198,255,0.4);
-}
-
-.video-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
-/* RESPONSIVE */
-@media (max-width: 768px) {
-    h2 {
-        font-size: 1.8rem;
-    }
-    .download-btn {
-        padding: 15px 30px;
-        font-size: 1rem;
-    }
-    header {
-        flex-direction: column;
-        gap: 15px;
-    }
-}
-</style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AppEvent | Yuzu Emulator</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&family=Share+Tech+Mono&family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+    
+    <style>
+        :root { --abyss: #020205; --magenta: #D62F7F; }
+        body, html { background: var(--abyss); color: #fff; margin: 0; font-family: 'Montserrat', sans-serif; min-height: 100vh; }
+        #custom-cursor { width: 30px; height: 30px; border: 1px solid var(--magenta); position: fixed; pointer-events: none; z-index: 10000; border-radius: 50%; transition: transform 0.1s ease-out; transform: translate(-50%, -50%); box-shadow: 0 0 15px var(--magenta); display: none; }
+        @media (min-width: 1024px) { body, html, * { cursor: none !important; } #custom-cursor { display: block; } }
+        .scanline { width: 100%; height: 100px; z-index: 40; pointer-events: none; background: linear-gradient(0deg, rgba(214, 47, 127, 0) 0%, rgba(214, 47, 127, 0.05) 50%, rgba(214, 47, 127, 0) 100%); position: fixed; top: -100px; animation: scan 6s linear infinite; }
+        @keyframes scan { 0% { top: -100px; } 100% { top: 100%; } }
+        .hud-corner { position: absolute; width: 15px; height: 15px; border: 1px solid var(--magenta); opacity: 0.5; }
+        .glass-panel { background: rgba(214, 47, 127, 0.02); border: 1px solid rgba(255, 255, 255, 0.1); backdrop-filter: blur(15px); }
+        .download-btn { background: transparent; border: 1px solid var(--magenta); color: var(--magenta); text-transform: uppercase; letter-spacing: 0.2em; transition: 0.4s; box-shadow: 0 0 15px rgba(214, 47, 127, 0.2); }
+        .download-btn:hover { background: var(--magenta); color: white; box-shadow: 0 0 30px var(--magenta); transform: translateY(-2px); }
+        .back-btn { font-family: 'Share Tech Mono', monospace; border: 1px solid rgba(255, 255, 255, 0.2); transition: 0.3s; }
+        .back-btn:hover { border-color: var(--magenta); color: var(--magenta); }
+        .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border: 1px solid rgba(214, 47, 127, 0.3); }
+    </style>
 </head>
 <body>
+    <div id="custom-cursor"></div>
+    <canvas id="starCanvas" class="fixed inset-0 z-0"></canvas>
+    <div class="scanline"></div>
 
-<header>
-    <h1>AppHub</h1>
-    <button onclick="window.history.back()">Retour</button>
-</header>
-
-<div class="container">
-
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Yuzu_Emulator.svg/1280px-Yuzu_Emulator.svg.png" alt="Yuzu Logo">
-
-    <h2>Téléchargement Windows</h2>
-    <p>Émulateur Nintendo Switch haute performance pour PC.</p>
-
-    <button class="download-btn"
-        onclick="window.open('https://www.dropbox.com/scl/fi/9rogd01pgjn8xbu677098/setup_yuzu1734.exe?rlkey=050xq9kl8034t1zaxjbxa8ckl&st=naptk6p2&dl=1','_blank')">
-        Télécharger pour Windows
-    </button>
-
-    <div class="youtube-section">
-        <h3>Tutoriel vidéo</h3>
-        <div class="video-wrapper">
-            <iframe 
-                src="https://www.youtube.com/embed/U1KBHgR_1r8?si=oNGxQaJTddnp92Hn"
-                title="Tutoriel Yuzu"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-            </iframe>
+    <nav class="relative z-50 border-b border-white/10 bg-black/50 backdrop-blur-md px-8 py-4 flex justify-between items-center">
+        <div class="flex items-center gap-4">
+            <div class="w-10 h-10 border border-magenta rotate-45 flex items-center justify-center overflow-hidden">
+                <img src="apphub.png" alt="Logo" class="rotate-[-45deg] w-6 h-6 object-contain">
+            </div>
+            <h1 class="font-rajdhani font-bold text-2xl tracking-tighter uppercase">App<span class="text-magenta">Event</span></h1>
         </div>
-    </div>
+        <button onclick="window.location.href='../dashboard.html'" class="back-btn px-6 py-2 text-xs tracking-widest uppercase"><< Return_to_Deck</button>
+    </nav>
 
-</div>
+    <main class="relative z-10 p-6 md:p-12 max-w-4xl mx-auto">
+        <div class="glass-panel p-8 md:p-12 relative">
+            <div class="hud-corner top-0 left-0 border-r-0 border-b-0"></div>
+            <div class="hud-corner bottom-0 right-0 border-l-0 border-t-0"></div>
 
+            <div class="flex flex-col items-center text-center">
+                <img class="w-24 mb-8 filter drop-shadow-[0_0_15px_rgba(214,47,127,0.4)]" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Yuzu_Emulator.svg/1280px-Yuzu_Emulator.svg.png" alt="Yuzu">
+                <p class="font-mono text-magenta text-[10px] tracking-[0.5em] uppercase mb-2">Core: SWITCH_EMULATION_NODE</p>
+                <h2 class="font-rajdhani text-3xl md:text-5xl font-bold uppercase tracking-tight mb-4">Yuzu Emulator</h2>
+                <p class="font-mono text-[11px] text-gray-500 mb-8">High-performance Nintendo Switch emulator for advanced Windows systems.</p>
+
+                <button class="download-btn px-10 py-5 font-bold text-sm" onclick="window.open('https://www.dropbox.com/scl/fi/rggrast2zx4koz12e5p5q/yuzu1734_setup.exe?rlkey=vjxonble0fuclhknrksre4r77&st=c732q0k3&dl=1')">
+                    Deploy_Emulator (Windows)
+                </button>
+            </div>
+
+            <div class="mt-16">
+                <h3 class="font-rajdhani font-bold text-xl uppercase tracking-widest mb-6">Instructional_Uplink</h3>
+                <div class="video-wrapper"><iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/nFB7IEv9Q9k" frameborder="0" allowfullscreen></iframe></div>
+            </div>
+        </div>
+    </main>
+
+    <script>
+        const canvas = document.getElementById('starCanvas'); const ctx = canvas.getContext('2d'); let stars = [];
+        function init() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; stars = []; for(let i=0; i<80; i++) stars.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, s:Math.random()*1.5, op:Math.random(), sp:Math.random()*0.015}); }
+        function anim() { ctx.clearRect(0,0,canvas.width, canvas.height); stars.forEach(s => { s.op += s.sp; if(s.op > 1 || s.op < 0) s.sp *= -1; ctx.fillStyle = `rgba(214, 47, 127, ${s.op})`; ctx.fillRect(s.x, s.y, s.s, s.s); }); requestAnimationFrame(anim); }
+        init(); anim();
+        const cursor = document.getElementById('custom-cursor'); window.addEventListener('mousemove', e => { cursor.style.left = e.clientX + 'px'; cursor.style.top = e.clientY + 'px'; });
+    </script>
 </body>
 </html>
-
-
-
