--- a/apps/yuzu.html
+++ b/apps/yuzu.html
@@ -56,7 +56,7 @@
 
             <div class="mt-16">
                 <h3 class="font-rajdhani font-bold text-xl uppercase tracking-widest mb-6">Instructional_Uplink</h3>
-                <div class="video-wrapper"><iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/nFB7IEv9Q9k" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/U1KBHgR_1r8?si=1gOF3vIdKLKFEsQg" frameborder="0" allowfullscreen></iframe></div>
             </div>
         </div>
     </main>
@@ -69,4 +69,5 @@
         const cursor = document.getElementById('custom-cursor'); window.addEventListener('mousemove', e => { cursor.style.left = e.clientX + 'px'; cursor.style.top = e.clientY + 'px'; });
     </script>
 </body>
+
 </html>
